--- a/Demos/TestBench2/TestBench2.csproj
+++ b/Demos/TestBench2/TestBench2.csproj
@@ -3,13 +3,14 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
-    <ProjectGuid>{B0CC1037-B38D-4DD1-A912-B1E5C75D7323}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>TestBench1</RootNamespace>
-    <AssemblyName>TestBench1</AssemblyName>
-    <StartupObject>TestBench1.TestBench1</StartupObject>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
+    <ProjectGuid>{32DBA08D-6204-428F-BDF0-E7CFB8FAB744}</ProjectGuid>
+    <OutputType>Exe</OutputType>
+    <RootNamespace>TestBench2</RootNamespace>
+    <AssemblyName>TestBench2</AssemblyName>
+    <StartupObject>TestBench2.TestBench2</StartupObject>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,13 +34,6 @@
   </PropertyGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Compile Include="AssemblyInfo.cs" />
-    <Compile Include="TestBench1.cs" />
-    <Compile Include="TestBench1_setupInput.cs" />
-    <Compile Include="TestBench1_setupScene.cs" />
-    <Compile Include="TestBench1_renderScene.cs" />
-  </ItemGroup>
-  <ItemGroup>
     <ProjectReference Include="..\..\SimpleScene\_SimpleScene.csproj">
       <Project>{4A7A056C-CB90-4F29-95DE-EAC471A6CBD7}</Project>
       <Name>_SimpleScene</Name>
@@ -47,13 +41,15 @@
     <ProjectReference Include="..\DemosCommon\DemosCommon.csproj">
       <Project>{FE371EFA-9B89-4AC4-84DF-428E0ADF5A57}</Project>
       <Name>DemosCommon</Name>
-      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System.Drawing" />
     <Reference Include="OpenTK">
       <HintPath>..\..\Libs\OpenTK.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="TestBench2.cs" />
   </ItemGroup>
 </Project>
