--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -7,6 +7,8 @@
     <OutputType>Library</OutputType>
     <RootNamespace>SimpleScene.Demos</RootNamespace>
     <AssemblyName>TestBenchCommon</AssemblyName>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -50,5 +52,79 @@
     </Reference>
     <Reference Include="System.Drawing" />
     <Reference Include="System" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Assets\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\checkerboard.png" />
+    <None Include="Assets\elements.png" />
+    <None Include="Assets\sun_flare.png" />
+    <None Include="Assets\sun_flare.txt" />
+    <None Include="Assets\testcube.mtl" />
+    <None Include="Assets\testcube.obj" />
+    <None Include="Assets\bob_lamp\Readme.txt" />
+    <None Include="Assets\bob_lamp\bob_body.png" />
+    <None Include="Assets\bob_lamp\bob_body.tga" />
+    <None Include="Assets\bob_lamp\bob_body_h.tga" />
+    <None Include="Assets\bob_lamp\bob_body_local.tga" />
+    <None Include="Assets\bob_lamp\bob_body_s.tga" />
+    <None Include="Assets\bob_lamp\bob_head.png" />
+    <None Include="Assets\bob_lamp\bob_head.tga" />
+    <None Include="Assets\bob_lamp\bob_head_h.tga" />
+    <None Include="Assets\bob_lamp\bob_head_local.tga" />
+    <None Include="Assets\bob_lamp\bob_head_s.tga" />
+    <None Include="Assets\bob_lamp\bob_helmet.png" />
+    <None Include="Assets\bob_lamp\bob_helmet.tga" />
+    <None Include="Assets\bob_lamp\bob_helmet_h.tga" />
+    <None Include="Assets\bob_lamp\bob_helmet_local.tga" />
+    <None Include="Assets\bob_lamp\bob_helmet_s.tga" />
+    <None Include="Assets\bob_lamp\bob_lamp_update.blend" />
+    <None Include="Assets\bob_lamp\bob_lamp_update.md5anim" />
+    <None Include="Assets\bob_lamp\bob_lamp_update.md5mesh" />
+    <None Include="Assets\bob_lamp\bob_lamp_update_export.blend" />
+    <None Include="Assets\bob_lamp\bob_lamp_update_export.md5anim" />
+    <None Include="Assets\bob_lamp\bob_lamp_update_export.md5mesh" />
+    <None Include="Assets\bob_lamp\lantern.png" />
+    <None Include="Assets\bob_lamp\lantern.tga" />
+    <None Include="Assets\bob_lamp\lantern_h.tga" />
+    <None Include="Assets\bob_lamp\lantern_local.tga" />
+    <None Include="Assets\bob_lamp\lantern_top.png" />
+    <None Include="Assets\bob_lamp\lantern_top.tga" />
+    <None Include="Assets\bob_lamp\lantern_top_h.tga" />
+    <None Include="Assets\bob_lamp\lantern_top_local.tga" />
+    <None Include="Assets\boneman\LICENSE.txt" />
+    <None Include="Assets\boneman\boneman.md5mesh" />
+    <None Include="Assets\boneman\boneman_attack.md5anim" />
+    <None Include="Assets\boneman\boneman_dead.md5anim" />
+    <None Include="Assets\boneman\boneman_dying.md5anim" />
+    <None Include="Assets\boneman\boneman_idle.md5anim" />
+    <None Include="Assets\boneman\boneman_pain.md5anim" />
+    <None Include="Assets\boneman\boneman_running.blend" />
+    <None Include="Assets\boneman\boneman_running.md5anim" />
+    <None Include="Assets\boneman\md5.cfg" />
+    <None Include="Assets\boneman\skin.png" />
+    <None Include="Assets\boneman\skin_n.png" />
+    <None Include="Assets\drone2\Drone2.mtl" />
+    <None Include="Assets\drone2\Drone2.obj" />
+    <None Include="Assets\drone2\drone2_bump.png" />
+    <None Include="Assets\drone2\drone2_color.png" />
+    <None Include="Assets\drone2\drone2_glow.png" />
+    <None Include="Assets\drone2\drone2_readme.txt" />
+    <None Include="Assets\drone2\drone2_spec.png" />
+    <None Include="Assets\explosions\fig7.png" />
+    <None Include="Assets\explosions\fig7_debug.png" />
+    <None Include="Assets\explosions\fix7.txt" />
+    <None Include="Assets\simpleasteroid\asteroid.mtl" />
+    <None Include="Assets\simpleasteroid\asteroid.obj" />
+    <None Include="Assets\simpleasteroid\asteroid.png" />
+    <None Include="Assets\simpleasteroid\readme.txt" />
+    <None Include="Assets\skybox\skybox-envmap-diagnostic.mtl" />
+    <None Include="Assets\skybox\skybox-envmap-diagnostic.obj" />
+    <None Include="Assets\skybox\skybox-envmap-diagnostic.png" />
+    <None Include="Assets\skybox\skybox.mtl" />
+    <None Include="Assets\skybox\skybox.obj" />
+    <None Include="Assets\skybox\skybox.png" />
+    <None Include="Assets\skybox\skybox_readme.txt" />
   </ItemGroup>
 </Project>
