Lots of laser intensity envelope functionality is in place. post release callback functionality

--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -47,6 +47,7 @@
     <Compile Include="TestBenchBootstrap_setupScene.cs" />
     <Compile Include="SimpleLaserObject.cs" />
     <Compile Include="SimpleLaserManager.cs" />
+    <Compile Include="SimpleLaser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
