--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -102,7 +102,6 @@
     <Compile Include="Core\SSShaderProgram.cs" />
     <Compile Include="Objects\SSObjectHUDQuad.cs" />
     <Compile Include="Meshes\Shapes\SSMeshDisk.cs" />
-    <Compile Include="Objects\SSObjectBillboard.cs" />
     <Compile Include="Core\SSTextureWithAlpha.cs" />
     <Compile Include="Lights\SSSimpleShadowMap.cs" />
     <Compile Include="Lights\SSParallelSplitShadowMap.cs" />
@@ -159,6 +158,7 @@
     <Compile Include="Util\Files\SSAssetManagerRegisterDefaultTypes.cs" />
     <Compile Include="Util\ADSREnvelope.cs" />
     <Compile Include="Meshes\ParticleSystems\SSParticleSystemData.cs" />
+    <Compile Include="Objects\SSObjectOcclusionQueuery.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
