--- a/Demos/TestBench0/TestBench0.csproj
+++ b/Demos/TestBench0/TestBench0.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -39,19 +39,19 @@
     <Compile Include="TestBench0_setupScene.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\SimpleScene\_SimpleScene.csproj">
-      <Project>{4A7A056C-CB90-4F29-95DE-EAC471A6CBD7}</Project>
-      <Name>_SimpleScene</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\DemosCommon\DemosCommon.csproj">
-      <Project>{FE371EFA-9B89-4AC4-84DF-428E0ADF5A57}</Project>
-      <Name>DemosCommon</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <Reference Include="OpenTK">
       <HintPath>..\..\Libs\OpenTK.dll</HintPath>
     </Reference>
     <Reference Include="System.Drawing" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\SimpleScene\_SimpleScene.csproj">
+      <Project>{4a7a056c-cb90-4f29-95de-eac471a6cbd7}</Project>
+      <Name>_SimpleScene</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DemosCommon\DemosCommon.csproj">
+      <Project>{fe371efa-9b89-4ac4-84df-428e0adf5a57}</Project>
+      <Name>DemosCommon</Name>
+    </ProjectReference>
   </ItemGroup>
 </Project>
