wip new laser flare

--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -41,6 +41,7 @@
     <Compile Include="SimpleLaser.cs" />
     <Compile Include="InstancedFlareEffect.cs" />
     <Compile Include="SimpleLaserBeamObject.cs" />
+    <Compile Include="SimpleLaserFlareEffect.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
