--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Lasers\SLaserManager.cs" />
     <Compile Include="Lasers\SLaser.cs" />
     <Compile Include="Lasers\SLaserEmissionFlareObject.cs" />
+    <Compile Include="Lasers\SLaserHitFlareObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
