SLaserHitFlareObject sprites are visible. wip on positioning and scaling

--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -129,5 +129,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Lasers\" />
+    <Folder Include="Assets\lasers\" />
   </ItemGroup>
 </Project>
