--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -37,12 +37,12 @@
     <Compile Include="SExplosionRenderer.cs" />
     <Compile Include="SSunFlareEffect.cs" />
     <Compile Include="SStarfieldObject.cs" />
-    <Compile Include="Lasers\SLaserBeamObject.cs" />
     <Compile Include="Lasers\SLaserManager.cs" />
     <Compile Include="Lasers\SLaser.cs" />
     <Compile Include="Lasers\SLaserEmissionFlareObject.cs" />
     <Compile Include="Lasers\SLaserHitFlareObject.cs" />
     <Compile Include="Lasers\SLaserBurnParticlesObject.cs" />
+    <Compile Include="Lasers\SLaserBeamMiddleObject.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
