--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -111,16 +111,10 @@
     <Compile Include="Meshes\Buffers\SSVertexBuffer.cs" />
     <Compile Include="Meshes\Buffers\SSAttributeBuffer.cs" />
     <Compile Include="Util\Interpolate.cs" />
-    <Compile Include="Meshes\ParticleSystems\ParticlesFieldGenerators.cs" />
-    <Compile Include="Meshes\ParticleSystems\ParticlesPlaneGenerators.cs" />
-    <Compile Include="Meshes\ParticleSystems\BodiesFieldGenerators.cs" />
-    <Compile Include="Meshes\ParticleSystems\ParticleEmitters.cs" />
-    <Compile Include="Meshes\ParticleSystems\ParticleEffectors.cs" />
     <Compile Include="Meshes\Buffers\AttributeFormats.cs" />
     <Compile Include="Meshes\Buffers\VertexFormats.cs" />
     <Compile Include="Core\SSInstanceShaderProgram.cs" />
     <Compile Include="Meshes\SSIndexedMesh.cs" />
-    <Compile Include="Meshes\ParticleSystems\SSInstancedMeshRenderer.cs" />
     <Compile Include="Meshes\Shapes\SSTexturedQuad.cs" />
     <Compile Include="Meshes\Shapes\SSTexturedCube.cs" />
     <Compile Include="Util\Prefs.cs" />
@@ -154,10 +148,17 @@
     <Compile Include="Meshes\Skeletal\SSSimpleObjectTrackingJoint.cs" />
     <Compile Include="Util\Files\SSAssetManagerRegisterDefaultTypes.cs" />
     <Compile Include="Util\ADSREnvelope.cs" />
-    <Compile Include="Meshes\ParticleSystems\SSParticleSystemData.cs" />
     <Compile Include="Objects\SSObjectOcclusionQueuery.cs" />
     <Compile Include="Util\SSFrustumCuller.cs" />
-    <Compile Include="Meshes\ParticleSystems\SSInstancedSpriteRenderer.cs" />
+    <Compile Include="Meshes\Instancing\ParticlesFieldGenerators.cs" />
+    <Compile Include="Meshes\Instancing\ParticlesPlaneGenerators.cs" />
+    <Compile Include="Meshes\Instancing\BodiesFieldGenerators.cs" />
+    <Compile Include="Meshes\Instancing\ParticleEmitters.cs" />
+    <Compile Include="Meshes\Instancing\ParticleEffectors.cs" />
+    <Compile Include="Meshes\Instancing\SSInstancedMeshRenderer.cs" />
+    <Compile Include="Meshes\Instancing\SSParticleSystemData.cs" />
+    <Compile Include="Meshes\Instancing\SSInstancedSpriteRenderer.cs" />
+    <Compile Include="Meshes\Instancing\SSInstancesData.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
@@ -203,9 +204,9 @@
     <None Include="TODO_BUG_hid_removal.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Meshes\ParticleSystems\" />
     <Folder Include="Assets\Shaders\Instancing\" />
     <Folder Include="Meshes\Skeletal\" />
     <Folder Include="Util\Files\" />
+    <Folder Include="Meshes\Instancing\" />
   </ItemGroup>
 </Project>
