Got missile renderer to show stuff

--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Missiles\SSpaceMissilesVisualSimulation.cs" />
     <Compile Include="Missiles\SSpaceMissileVisualSimData.cs" />
     <Compile Include="Missiles\SSpaceMissilesVisualSimulationManager.cs" />
+    <Compile Include="Missiles\MissileTargets.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
