Renaming missile classes (making them simpler and shorter)

--- a/Demos/DemosCommon/DemosCommon.csproj
+++ b/Demos/DemosCommon/DemosCommon.csproj
@@ -48,7 +48,8 @@
     <Compile Include="Missiles\SSpaceMissilesVisualSimulation.cs" />
     <Compile Include="Missiles\SSpaceMissileVisualSimData.cs" />
     <Compile Include="Missiles\MissileTargets.cs" />
-    <Compile Include="Missiles\SSpaceMissilesManager.cs" />
+    <Compile Include="Missiles\SSpaceMissileVisualParameters.cs" />
+    <Compile Include="Missiles\SSpaceMissilesRenderManager.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="OpenTK">
