--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -138,7 +138,6 @@
     <Compile Include="Util\Files\SSMD5Parser.cs" />
     <Compile Include="Meshes\Shapes\SSMeshBoundingSphere.cs" />
     <Compile Include="Util\Files\SSAssetManagerRegisterDefaultTypes.cs" />
-    <Compile Include="Util\ADSREnvelope.cs" />
     <Compile Include="Objects\SSObjectOcclusionQueuery.cs" />
     <Compile Include="Util\SSFrustumCuller.cs" />
     <Compile Include="Meshes\Instancing\ParticlesFieldGenerators.cs" />
@@ -183,6 +182,7 @@
     <Compile Include="Extra\TestBenchBootstrap\TestBenchBootstrap_setupInput.cs" />
     <Compile Include="Extra\TestBenchBootstrap\TestBenchBootstrap_setupScene.cs" />
     <Compile Include="Extra\SHudTargetsManager.cs" />
+    <Compile Include="Util\LinearADSREnvelope.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
