consolidating functionality into color material class; extracting color material from mtl info and using this material for each subset instead of using diffuse color per vertex like before

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Extra\Missiles\SSpaceMissilesVisualSimulation.cs" />
     <Compile Include="Extra\SExplosionParameters.cs" />
     <Compile Include="Extra\SExplosionManager.cs" />
+    <Compile Include="Core\SSColorMaterial.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
