more wip cylinder shader and its use

--- a/SimpleScene/_SimpleScene.csproj
+++ b/SimpleScene/_SimpleScene.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Core\SSColorMaterial.cs" />
     <Compile Include="Extra\SSkyboxRenderer.cs" />
     <Compile Include="Extra\STrailsRenderer.cs" />
+    <Compile Include="Core\SSInstancedCylinderShaderProgram.cs">
+      <Link>Core\Core\SSInstancedCylinderShaderProgram.cs</Link>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup />
